# everything

./: CHANGELOG.md  Cargo.toml  README.md  TODO.md  a.out  syntax.txt  t.ll
.github/workflows/: cargo_clippy.yml  changelog.yaml  msrv.yml  publish.yaml
docs/: README.md  language.md  standard-library.md
examples/: autocurryingvariadiacs.everything  basic_call.everything  curry.everything  curry1.everything  early_return1.everything  early_return2.everything  goto.everything  if.everything  lambda.everything  loop.everything  sicp2.everything  unit.everything
matcher/: Cargo.toml  README.md
matcher/src/: lib.rs
src/: ast.rs  error.rs  evaluator.rs  expander.rs  lexer.rs  macros.rs  main.rs  multimap.rs  pc.rs  primitives.rs  reader.rs
src/ast/: ast1.rs  ast2.rs  ast3.rs  ast4.rs  mod.rs  scope.rs  syntax.rs
src/codegen/: conditionals.rs  env.rs  export_code.rs  functions-back.rs  functions.rs  loops.rs  mod.rs  multimap.rs  object.rs  quotation.rs  register_to_llvm.rs  sicp.rs  stdlib.rs
src/expander/: binding.rs  compile.rs  core.rs  duplicate_check.rs  expand.rs  expand_context.rs  expand_expr.rs  expand_top_level.rs  match.rs  namespace.rs
