[package]
name = "everything-lang"
version = "0.1.0"
edition = "2021"
rust_edition = "1.69.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
# TODO: when lazy fully works make it defualt
default = ["lazy"]
multi-threaded = []
lazy = []

[dependencies]
hexponent = "0.3.1"
unic-emoji-char = "0.9.0"
parse_int = "0.6.0"
inkwell = {version = "0.4.0", features = ["llvm15-0"]}
clap = {version = "4.4.0", features = ["derive"]}
log = "0.4.21"
simple_file_logger = { version = "0.4.1", features = ["clap"] }
itertools = "0.14.0"
matcher-proc-macro = { version = "0.1.0", path = "matcher" }
trace = { git = "https://github.com/gsingh93/trace", version = "0.1.7" }
rand = "0.9.1"
